# audio-ninja

./: .codecov.yml  .gitignore  .markdownlint.json  AUDIO_IO_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUI_PHASE2_STATUS.txt  GUI_PHASE2_SUMMARY.md  GUI_PHASE2_TASKS.md  IMPLEMENTATION_READY.md  LICENSE  Makefile  PRODUCTION_READY_STATUS.md  README.md  SECURITY.md  SESSION_SUMMARY.md  TASK_COMPLETION_REPORT.md
.cargo/: config.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.githooks/: README.md  pre-commit
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs-deploy.yml  release.yml
assets/: README.md
assets/test-audio/: README.md
crates/audio-ninja/src/: dspconfig.rs  jitter.rs  latency.rs  lib.rs  mapping.rs  network.rs  render.rs
crates/audio-ninja/tests/: hrtf_tests.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs  tui_feature.rs
crates/cli/src/tui/: app.rs  handler.rs  mod.rs  ui.rs
crates/cli/tests/: cli_tests.rs  e2e_daemon_cli.rs
crates/core/: Cargo.toml
crates/core/benches/: main_benchmarks.rs
crates/core/examples/: binaural_rendering.rs  loudness_processing.rs
crates/core/fuzz/: Cargo.toml  README.md
crates/core/fuzz/fuzz_targets/: fuzz_network_packet.rs  fuzz_rtp_header.rs  fuzz_sync_clock.rs
crates/core/src/: ble.rs  calibration.rs  control.rs  dspconfig.rs  fec.rs  hoa.rs  hrtf.rs  input.rs  jitter.rs  latency.rs  lib.rs  loudness.rs  mapping.rs  network.rs  output.rs  render.rs  sync.rs  transport.rs  vbap.rs
crates/core/tests/: calibration_tests.rs  hoa_tests.rs  hrtf_tests.rs  iamf_tests.rs  vbap_tests.rs
crates/daemon/: Cargo.toml  README.md  audio-ninja-daemon.service  openapi.yaml
crates/daemon/src/: api.rs  engine.rs  lib.rs  main.rs
crates/daemon/tests/: api_tests.rs
crates/gui/: .gitignore  Cargo.toml  README.md  tauri.conf.json
crates/gui/public/: app.js  index.html  style.css
crates/gui/src/: main.rs
crates/gui/src-tauri/: tauri.conf.json
docs/: CROSS_PLATFORM.md  FIRMWARE_UPDATE.md  ICON_DESIGN.md  PIPELINE_FIXES.md  RELEASE.md  api_usage.md  binaural_rendering.md  calibration.md  codec_integration.md  firmware_update.md  hrtf.md  loudness_drc.md  release.md
docs-site/: .gitignore  .nojekyll  README.md  api.md  gui-design-system.md  package.json
docs-site/src/: README.md
docs-site/src/.vuepress/: config.ts
docs-site/src/.vuepress/styles/: config.scss  index.scss  palette.scss
docs-site/src/api/: README.md  api_usage.md  daemon_workflow.md
docs-site/src/deployment/: api.md  cli.md  daemon.md  firmware.md  release.md
docs-site/src/design/: README.md
docs-site/src/guide/: README.md  cli-tui.md  configuration.md  gui-quick-reference.md  installation.md  quick-start.md  tui.md
docs-site/src/processing/: calibration.md  codec_integration.md  codecs.md  drc.md  firmware_update.md  loudness.md
docs-site/src/reference/: README.md  api_usage.md  calibration.md  hoa.md  loudness_drc.md  vbap.md
docs-site/src/spatial/: comparison.md  hoa.md  hrtf.md  overview.md  vbap.md
docs-site/src/todo/: README.md  gui-phase2-tasks.md
examples/: README.md  hrtf_binaural.rs  loudness_processing.rs
scripts/: dev-setup.sh  generate-icons.sh
src/: ble.rs  dsp.rs  fec.rs  ffmpeg.rs  iamf.rs  lib.rs  loudness.rs  pipeline.rs  render.rs  sync.rs  transport.rs
tests/: ble_tests.rs  drc_tests.rs  fec_tests.rs  hoa_tests.rs  loudness_render_tests.rs  network_tests.rs  transport_tests.rs
