[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/daemon",
    "crates/gui",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Audio Ninja Contributors"]
repository = "https://github.com/mr-u0b0dy/audio-ninja"
rust-version = "1.70"

[workspace.dependencies]
# Core library
audio-ninja = { path = "crates/core" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Networking
reqwest = { version = "0.11", features = ["json"] }
axum = "0.8"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
mdns-sd = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# GUI
tauri = { version = "1.5", features = ["shell-open"] }
tauri-build = "1.5"

# Other
bincode = "3.0"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# Per-crate size-focused overrides
