[package]
name = "audio-ninja-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "audio-ninja"
path = "src/main.rs"

[dependencies]
audio-ninja.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
uuid.workspace = true
ratatui = "0.30"
crossterm = { version = "0.28", features = ["events"] }
