[package]
name = "audio-ninja"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Audio Ninja Contributors"]
description = "Open-source wireless immersive audio platform with IAMF support, spatial rendering (VBAP, HOA), networked transport, and room calibration"
repository = "https://github.com/mr-u0b0dy/audio-ninja"
homepage = "https://github.com/mr-u0b0dy/audio-ninja"
documentation = "https://docs.rs/audio-ninja"
readme = "README.md"
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "main_benchmarks"
harness = false

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
tokio = { version = "1.42", features = ["net", "sync", "time", "rt", "macros"] }
mdns-sd = "0.11"
uuid = { version = "1.11", features = ["v4", "serde"] }
