[package]
name = "audio-ninja-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "audio_ninja_daemon"
path = "src/lib.rs"

[[bin]]
name = "audio-ninja-daemon"
path = "src/main.rs"

[dependencies]
audio-ninja.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
