[package]
name = "audio-ninja-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
uuid.workspace = true

[[bin]]
name = "audio-ninja-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true
